--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style type="text/css">
+    html { height: 100% }
+    body { height: 100%; margin: 0; padding: 0 }
+    #map-canvas { height: 100% }
+  </style>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="dpd.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD388dgqbWdOBqV6eSI7dmV8HsK6w2DR8&sensor=false"></script>
+  <script>
+    var cafe = new google.maps.LatLng(37.869085,-122.254775);
+
+function initialize() {
+
+  var panoramaOptions = {
+    position: cafe,
+    pov: {
+      heading: 270,
+      pitch: 0
+    },
+    visible: true
+  };
+  var panorama = new google.maps.StreetViewPanorama(document.getElementById('pano'), panoramaOptions);
+
+  google.maps.event.addListener(panorama, 'pano_changed', function() {
+      var panoCell = document.getElementById('pano_cell');
+      panoCell.innerHTML = panorama.getPano();
+  });
+
+  google.maps.event.addListener(panorama, 'links_changed', function() {
+      var linksTable = document.getElementById('links_table');
+      while(linksTable.hasChildNodes()) {
+        linksTable.removeChild(linksTable.lastChild);
+      };
+      var links =  panorama.getLinks();
+      for (var i in links) {
+        var row = document.createElement('tr');
+        linksTable.appendChild(row);
+        var labelCell = document.createElement('td');
+        labelCell.innerHTML = '<b>Link: ' + i + '</b>';
+        var valueCell = document.createElement('td');
+        valueCell.innerHTML = links[i].description;
+        linksTable.appendChild(labelCell);
+        linksTable.appendChild(valueCell);
+      }
+  });
+
+  google.maps.event.addListener(panorama, 'position_changed', function() {
+      var positionCell = document.getElementById('position_cell');
+      positionCell.firstChild.nodeValue = panorama.getPosition() + '';
+  });
+
+  google.maps.event.addListener(panorama, 'pov_changed', function() {
+      var headingCell = document.getElementById('heading_cell');
+      var pitchCell = document.getElementById('pitch_cell');
+      headingCell.firstChild.nodeValue = panorama.getPov().heading + '';
+      pitchCell.firstChild.nodeValue = panorama.getPov().pitch + '';
+  });
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+  </script>
+
 </head>
 <body>
-	<h1>Welcome to Deployd!</h1>
-	<p>You've just created a Deployd app. You can add front-end files in the <code>public</code> folder.</p>
-	<p>If you're new to Deployd, have a look at the <a href="http://docs.deployd.com/docs/getting-started/what-is-deployd.md">Getting Started Guide</a> or <a href="http://docs.deployd.com/docs/getting-started/your-first-api.md">Hello World Tutorial<a>.</p>
+  <h1>Where u at?</h1>
+  <div id="pano" style="width: 45%; height: 100%;float:left"></div>
+  <div id="panoInfo" style="width: 45%; height: 100%;float:left">
+    <table>
+      <tr>
+        <td><b>Position</b></td><td id="position_cell">&nbsp;</td>
+      </tr>
+      <tr>
+        <td><b>POV Heading</b></td><td id="heading_cell">270</td>
+      </tr>
+      <tr>
+        <td><b>POV Pitch</b></td><td id="pitch_cell">0.0</td>
+      </tr>
+      <tr>
+        <td><b>Pano ID</b></td><td id="pano_cell">&nbsp;</td>
+      </tr>
+      <table id="links_table"></table>
+    </table>
+  </div>
 </body>
 </html>
