--- a/public/index.html
+++ b/public/index.html
@@ -16,23 +16,6 @@
 </head>
 <body>
   <h1>Where U At?</h1>
-  <div id="pano" style="width: 45%; height: 100%;float:left"></div>
-  <div id="panoInfo" style="width: 45%; height: 100%;float:left">
-    <table>
-      <tr>
-        <td><b>Position</b></td><td id="position_cell">&nbsp;</td>
-      </tr>
-      <tr>
-        <td><b>POV Heading</b></td><td id="heading_cell">270</td>
-      </tr>
-      <tr>
-        <td><b>POV Pitch</b></td><td id="pitch_cell">0.0</td>
-      </tr>
-      <tr>
-        <td><b>Pano ID</b></td><td id="pano_cell">&nbsp;</td>
-      </tr>
-      <table id="links_table"></table>
-    </table>
-  </div>
+  <button>Start</button>
 </body>
 </html>
